.kube/django.yml
apiVersion: v1
kind: Service
metadata:
  namespace: x5-lot37
  name: django
spec:
  type: NodePort
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 8010
      targetPort: 8010

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: x5-lot37
  name: django-deploy
  labels:
    app: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      imagePullSecrets:
        - name: myregistry
      containers:
      - name: django
        image: gitlab.artw.ru:5050/com_projects/tenders/2025/x5_group/lot37:backend-latest
        command: [ "python",  "manage.py", "runserver", "0.0.0.0:8010"]
        ports:
        - containerPort: 8010
        imagePullPolicy: Always
        volumeMounts:
          - name: django-volume
            mountPath: /app/static
      volumes:  
        - name: django-volume
          persistentVolumeClaim:
            claimName: django-pvc
