.kube/frontend.yml
apiVersion: v1
kind: Service
metadata:
  namespace: x5-lot37
  name: frontend-service
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 31100
  selector:
    app: frontend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: x5-lot37
  name: frontend-deploy
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: myregistry 
      containers:
      - name: frontend
        image: gitlab.artw.ru:5050/com_projects/tenders/2025/x5_group/lot37:frontend-latest
        command: ["nginx", "-g", "daemon off;"]
        ports:
        - containerPort: 80
        imagePullPolicy: Always
        volumeMounts:
          - name: django-volume
            mountPath: /var/www/django/static
      volumes:  
        - name: django-volume
          persistentVolumeClaim:
            claimName: django-pvc
